...
            "value": "Discard changes?"
          }
        },
        "vi": {
          "stringUnit": {
            "state": "translated",
            "value": "Bỏ các thay đổi?"
          }
        }
      }
    },
    "periodEdit.hint": {
      "extractionState": "manual",
...
